--- a/developer.html
+++ b/developer.html
@@ -52,7 +52,7 @@
                                 <div class="content-overlay"></div>
                                 <img class="content-image" src="img/dev/2020/p2020.png" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions">Former Portfolio</div>
+                                    <div class="captions"><a href="https://github.com/IPbiramontes/2020_Portfolio"> Former Portfolio </a>  </div>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                             <div class="content">
                                 <div class="content-overlay"></div>
                                 <img class="content-image" src="img/dev/2019/google.png" style="width:100%">
-                                <div class="content-details fadeIn-top"><div class="captions"> <a href="https://ipbiramontes.github.io/portfolio_studio/"> Studio Portfolio </a> </div></div>
+                                <div class="content-details fadeIn-top"><div class="captions"> <a href="https://ipbiramontes.github.io/portfolio_studio/"> Studio portfolio </a> </div></div>
                             </div>
                         </div>
                     </div>  
@@ -140,77 +140,94 @@
                       <hr width="75%" color="#d8ff33" border-width="10px">
                   </div>
                   
-                  <!-- 2018 & 2017 -->
+                  <!-- 2018 -->
                   <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                     <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2018</h3>
-                    <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: right; padding-left:73%;">2017</h3>
-                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Code Nation Advanced Classes Internship, & Foundations</h3>
+                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Code Nation Advanced/Studio Classes & Hackathons </h3>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
+                    <div class="col" style="padding-right: 2%;">
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/dev/181716/nbahack.jpeg" style="width:100%">
+                                <div class="content-details fadeIn-top">
+                                    <div class="captions"><a href="https://hackathon.nba.com/2018-hackathon-recap/"> NBA Hackathon</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding-right: 2%;">
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
                                 <img class="content-image" src="img/art/20182017/Stranger.gif" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions"> Inspired by <i>The Stranger</i></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
-                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
-                            <div class="content">
-                                <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
-                                <div class="content-details fadeIn-top">
-                                    <div class="captions"> Inspired by <a href="https://github.com/IPbiramontes/macbeth-characterization"> <i>Macbeth</i> </a></div>     
+                                    <div class="captions"><a href="https://hackathon.nba.com/2018-hackathon-recap/"> NBA Hackathon</a></div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
+                    <hr width="75%" color="#d8ff33" border-width="10px">
+                </div>
+                <!-- 2017 -->
                 <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                    <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2018</h3>
-                    <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: right; padding-left:73%;">2017</h3>
-                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;"></h3>
+                    <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2017</h3>
+                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;"> Code Nation Summer Intership & Advanced Classes @ Oscar Health </h3>
                 </div>
                 <div class="row">
-                    <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
+                    <div class="col" style="padding-right: 2%;">
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/20182017/Stranger.gif" style="width:100%">
+                                <img class="content-image" src="img/dev/181716/nib.png" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions"> Inspired by <i>The Stranger</i></div>
+                                    <div class="captions"><a href="https://github.com/kingimperfection/HealthyNibblers"> Code Nation summer internship final project</a></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
+                    <div class="col" style="padding-right: 2%;">
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
                                 <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions"> Inspired by <a href="https://github.com/IPbiramontes/macbeth-characterization"> <i>Macbeth</i> </a></div>     
+                                    <div class="captions"> Interactive Art Page Inspired by <a href="https://github.com/IPbiramontes/macbeth-characterization"> <i>Macbeth</i> </a></div>     
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col" style="padding-right: 2%;">
+                        <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
+                            <div class="content">
+                                <div class="content-overlay"></div>
+                                <img class="content-image" src="img/dev/181716/second.png" style="width:100%">
+                                <div class="content-details fadeIn-top">
+                                    <div class="captions"> <a href="https://github.com/IPbiramontes/portfolio"> Advanced portfolio </a></div>     
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
+                    <hr width="75%" color="#d8ff33" border-width="10px">
+                </div>
+                <!-- 2016 -->
                 <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                     <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2016</h3>
-                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;"> Code Nation Foundations Classes</h3>
+                    <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;"> Code Nation Foundations Classes & Hackathon </h3>
                 </div>
                 <div class="row">
                     <div class="col-xs-6 col-md-6" style="padding-right: 2%;">
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/20182017/Stranger.gif" style="width:100%">
+                                <img class="content-image" src="img/dev/181716/cfc.gif" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions"> Code For Change Hackathon</div>
+                                    <div class="captions"> <a href="https://github.com/IPbiramontes/code-for-change-solar"> Code For Change Hackathon, Won "Best Teamwork"</a></div>
                                 </div>
                             </div>
                         </div>
@@ -219,9 +236,9 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 10%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
+                                <img class="content-image" src="img/dev/181716/first.png" style="width:100%">
                                 <div class="content-details fadeIn-top">
-                                    <div class="captions"> </a></div>     
+                                    <div class="captions"><a href="https://github.com/IPbiramontes/Portfolio_Unit6"> Foundations portfolio</a></div>     
                                 </div>
                             </div>
                         </div>
