--- a/designer.html
+++ b/designer.html
@@ -124,7 +124,6 @@
                 </div>
             </div>
             <div class="row">
-                <!--First Wearable Tech Garment, Debuted at The High School of Fashion Industries Senior Fashion Show -->
                 <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
@@ -138,6 +137,59 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/2019/dev_2019_2tb.png" style="width:100%">
                             <div class="content-details fadeIn-top"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/art/2020/artist_2020_1.png" style="width:100%">
+                            <div class="content-details fadeIn-top"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/fuafinal.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Fashion Design Studio Course at Florence University of the Arts </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/fuamood.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Fashion Design Studio Course at Florence University of the Arts </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/gd3.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Team Member on Kleinfeld Bridal Competition </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-3 col-md-3" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/photovillegd.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Team Member on Kleinfeld Bridal Competition </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -179,7 +231,7 @@
                         <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 8%;">
                             <div class="content">
                                 <div class="content-overlay"></div>
-                                <img class="content-image" src="img/des/ppdress.png" style="width:100%">
+                                <img class="content-image" src="img/des/fap3.1.png" style="width:100%">
                                 <div class="content-details fadeIn-top">
                                     <div class="captions"> Fashion Art Project 3, Pop Art Inspired <br> </div>
                                 </div>
